--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,45 @@ jobs:
       run: docker build . --file Dockerfile --tag macro.int.pgmac.net:5000/nagios:${{ inputs.tags || steps.vars.outputs.tag }}
     - name: Push to my internal registry
       run: docker push macro.int.pgmac.net:5000/nagios:${{ inputs.tags || steps.vars.outputs.tag }}
+
+    - name: Run Syft SBoM scan
+        uses: anchore/sbom-action@v0.17.8
+        with:
+          image: macro.int.pgmac.net:5000/nagios:${{ inputs.tags || steps.vars.outputs.tag }}
+          format: cyclonedx-json
+          output-file: syft-sbom.json
+          artifact-name: syft-sbom.json
+
+      - name: Upload SBoM to GitHub Artifact storage
+        uses: actions/upload-artifact@v4
+        with:
+            name: syft-sbom.json
+            path: 'syft-sbom.json'
+            retention-days: 2
+            overwrite: true
+
+      - name: SHA256 hash the SBoM
+        id: sha256
+        run: echo "SHA256=$(sha256sum syft-sbom.json | cut -d ' ' -f1)" >> $GITHUB_ENV
+
+      - name: Attest the SBoM
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: macro.int.pgmac.net:5000/Docker-Nagios/syft-sbom.json
+          subject-digest: sha256:${{ env.SHA256 }}
+          show-summary: true
+          push-to-registry: true
+
+      - name: Upload SBoM to Dependency Track
+        uses: DependencyTrack/gh-upload-sbom@v3.1.0
+        with:
+          serverhostname: 'dtrack.int.pgmac.net'
+          protocol: 'https'
+          apikey: ${{ secrets.DT_APIKEY }}
+          project: ${{ secrets.DT_PROJECT_UUID }}
+          bomfilename: 'syft-sbom.json'
+          autocreate: false
+
     - name: Exit code failure
       if: failure()
       run: |
