--- a/.github/workflows/anchore-syft.yml
+++ b/.github/workflows/anchore-syft.yml
@@ -33,10 +33,14 @@ jobs:
       actions: read
     runs-on: self-hosted
     steps:
+    - name: Set the image version
+      id: vars
+      run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+
     - name: Scan the image and upload dependency results
       uses: anchore/sbom-action@bb716408e75840bbb01e839347cd213767269d4a
       with:
-        image: macro.int.pgmac.net:5000/nagios:${{ inputs.tags || 0.0.7 }}
+        image: macro.int.pgmac.net:5000/nagios:${{ inputs.tags || steps.vars.outputs.tag }}
         format: cyclonedx-json
         output-file: syft-sbom.json
         artifact-name: syft-sbom.json
@@ -69,6 +73,6 @@ jobs:
         protocol: 'https'
         apiKey: ${{ secrets.DT_APIKEY }}
         projectName: Docker-Nagios
-        projectVersion: ${{ inputs.tags || 0.0.7 }}
+        projectVersion: ${{ inputs.tags || steps.vars.outputs.tag }}
         bomFilename: 'syft-sbom.json'
         autoCreate: true
