Add some permissions to do attesting

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,11 @@ on:
   workflow_dispatch:
 jobs:
   build-n-push:
+    permissions:
+      id-token: write
+      attestations: write
+      actions: read
+      contents: write
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
